WIP: tdf#120839 Special handling for anchored-to-char frames

This resolves a regression introduced by
8d62b79f168180c6992eb483ec864d473050635f

Change-Id: Ie7acd3c58ef9055cbe449ec15d337f03a02e0edd